#62141 - Fix search form on mobile

--- a/Snowdog_Components/components/Organisms/header/_search-form.scss
+++ b/Snowdog_Components/components/Organisms/header/_search-form.scss
@@ -1,9 +1,12 @@
 .search-form {
-    position: relative;
     width: $search-form__width;
     align-self: $search-form__alignment;
     line-height: $font-line-height;
     margin: $search-form__margin;
+
+    @include mq($screen-m) {
+        position: relative;
+    }
 
     &__input-wrapper {
         position: relative;
